--- a/Demo20200818.ipynb
+++ b/Demo20200818.ipynb
@@ -2919,6 +2919,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d-wiAmlPqinc",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1KL06mW-nWpt",
@@ -2926,7 +2936,721 @@
         "colab": {}
       },
       "source": [
-        "5"
+        "dic = {'1': '壹',\n",
+        " '2': '貳',\n",
+        " '3': '參',\n",
+        " '4': '肆',\n",
+        " '5': '伍',\n",
+        " '6': '陸',\n",
+        " '7': '柒',\n",
+        " '8': '捌',\n",
+        " '9': '玖',\n",
+        " '0': '零'}"
+      ],
+      "execution_count": 155,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3p9xYUTVqlys",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def numberConvert(n):\n",
+        "  s = ''\n",
+        "  try:\n",
+        "    for e in str(n):\n",
+        "      s += dic.get(e)\n",
+        "    return s\n",
+        "  except Exception as e:\n",
+        "    print(e)\n",
+        "    print('請輸入數字')\n",
+        "  "
+      ],
+      "execution_count": 163,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9GbhmCSlqp7O",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "0ed8f58c-3fd2-4058-a8ab-60e3220d518e"
+      },
+      "source": [
+        "numberConvert('qoo')"
+      ],
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "must be str, not NoneType\n",
+            "請輸入數字\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OA0RM7Psqr0-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "446daac4-b300-4d8b-ed32-a6bd8bf62694"
+      },
+      "source": [
+        "a = 3\n",
+        "a == 3"
+      ],
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 166
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q4vsGRU0roND",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "cf5896ad-5807-4c98-b76d-ff4e6765c7f5"
+      },
+      "source": [
+        "a == 4"
+      ],
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 167
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v_iHy5Axrpw3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "assert a == 3"
+      ],
+      "execution_count": 168,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-T0FAtpUrtGH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 167
+        },
+        "outputId": "afd8969e-764f-4877-b384-c130c21660e8"
+      },
+      "source": [
+        "assert a == 4"
+      ],
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AssertionError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-169-7191c8b9f4a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AxkiSqSUrwQv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def test(a):\n",
+        "  a = a + 1\n",
+        "  assert a == 3\n",
+        "  \n",
+        "test(2)"
+      ],
+      "execution_count": 170,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M0oSYSx1r-4-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 291
+        },
+        "outputId": "267fced4-bfbe-48ac-b225-8ebc19e3493b"
+      },
+      "source": [
+        "test(5)"
+      ],
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AssertionError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-171-1849df3ec375>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-170-b0ad1e48bf83>\u001b[0m in \u001b[0;36mtest\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0;32massert\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAssertionError\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uaJfpqW-sfpr",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Object"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y9cGh6YZsGj_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e6abc11b-c3d9-4d30-abdb-aaa75e977daa"
+      },
+      "source": [
+        "type(1 )"
+      ],
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 172
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j2srSutPsi20",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "71cfe371-9c40-4dd2-9aad-4a33ca08531a"
+      },
+      "source": [
+        "dir(1 )"
+      ],
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__abs__',\n",
+              " '__add__',\n",
+              " '__and__',\n",
+              " '__bool__',\n",
+              " '__ceil__',\n",
+              " '__class__',\n",
+              " '__delattr__',\n",
+              " '__dir__',\n",
+              " '__divmod__',\n",
+              " '__doc__',\n",
+              " '__eq__',\n",
+              " '__float__',\n",
+              " '__floor__',\n",
+              " '__floordiv__',\n",
+              " '__format__',\n",
+              " '__ge__',\n",
+              " '__getattribute__',\n",
+              " '__getnewargs__',\n",
+              " '__gt__',\n",
+              " '__hash__',\n",
+              " '__index__',\n",
+              " '__init__',\n",
+              " '__init_subclass__',\n",
+              " '__int__',\n",
+              " '__invert__',\n",
+              " '__le__',\n",
+              " '__lshift__',\n",
+              " '__lt__',\n",
+              " '__mod__',\n",
+              " '__mul__',\n",
+              " '__ne__',\n",
+              " '__neg__',\n",
+              " '__new__',\n",
+              " '__or__',\n",
+              " '__pos__',\n",
+              " '__pow__',\n",
+              " '__radd__',\n",
+              " '__rand__',\n",
+              " '__rdivmod__',\n",
+              " '__reduce__',\n",
+              " '__reduce_ex__',\n",
+              " '__repr__',\n",
+              " '__rfloordiv__',\n",
+              " '__rlshift__',\n",
+              " '__rmod__',\n",
+              " '__rmul__',\n",
+              " '__ror__',\n",
+              " '__round__',\n",
+              " '__rpow__',\n",
+              " '__rrshift__',\n",
+              " '__rshift__',\n",
+              " '__rsub__',\n",
+              " '__rtruediv__',\n",
+              " '__rxor__',\n",
+              " '__setattr__',\n",
+              " '__sizeof__',\n",
+              " '__str__',\n",
+              " '__sub__',\n",
+              " '__subclasshook__',\n",
+              " '__truediv__',\n",
+              " '__trunc__',\n",
+              " '__xor__',\n",
+              " 'bit_length',\n",
+              " 'conjugate',\n",
+              " 'denominator',\n",
+              " 'from_bytes',\n",
+              " 'imag',\n",
+              " 'numerator',\n",
+              " 'real',\n",
+              " 'to_bytes']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 173
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "msaGHnwIskOc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "aebf1496-86d4-4e3e-9203-7ecfbe867448"
+      },
+      "source": [
+        "a = 1\n",
+        "type(a)"
+      ],
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MDhZ4XrGspI8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "023edd51-7105-43f8-dbaa-7c0ad672718b"
+      },
+      "source": [
+        "a"
+      ],
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 175
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AJlFSGaWsqVT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "806a637b-27cf-47b4-9c23-cd08675288d5"
+      },
+      "source": [
+        "id(a)"
+      ],
+      "execution_count": 176,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10914496"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 176
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qFkqQHTXssIU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = 1\n",
+        "b = 1"
+      ],
+      "execution_count": 177,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZQRkIl1Xs-2e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "fdf02f6e-df2e-4cf4-847f-6d367afaf417"
+      },
+      "source": [
+        "id(a)"
+      ],
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10914496"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 178
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8MBOHpYus_qm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "11bb79c0-fd8b-4718-c7fa-b9e19a89b6af"
+      },
+      "source": [
+        "id(b)"
+      ],
+      "execution_count": 179,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10914496"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 179
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qw0hWohPtBx_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = 2"
+      ],
+      "execution_count": 180,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yYYc6k_FtGyW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6dc0c8f0-cfc5-48d5-996d-de44e0c35c68"
+      },
+      "source": [
+        "id(a)"
+      ],
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10914528"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 181
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QTmbEt8jtHgU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "outputId": "a2ada376-4bd8-4f97-9b93-32ba810c8a44"
+      },
+      "source": [
+        "a = 'qoo'\n",
+        "a[1] = '2'"
+      ],
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-182-efde2ba390b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'qoo'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'2'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YFQqASHatPq7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = [1,2,3]\n",
+        "aa = [1,2,3]\n"
+      ],
+      "execution_count": 183,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UU1MK4-StXbD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3e90e810-d35b-4832-a680-2a5a351a42c1"
+      },
+      "source": [
+        "id(a)\n"
+      ],
+      "execution_count": 184,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "139741974822152"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 184
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GJXnpu4ttYAT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "98161c44-c2d5-4ea0-87cc-35b311074995"
+      },
+      "source": [
+        "id(aa)"
+      ],
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "139741974820616"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aoz-NGXgtZPX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a[1] = 200"
+      ],
+      "execution_count": 186,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PN96V4iBthFo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e286911f-00fd-46a8-fa9f-84e7d52dfc76"
+      },
+      "source": [
+        "id(a)"
+      ],
+      "execution_count": 187,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "139741974822152"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 187
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uvRrS12qth6H",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
