--- a/Demo20200818.ipynb
+++ b/Demo20200818.ipynb
@@ -4831,9 +4831,324 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z183pdEbHIxR",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "gGa8riVODP4A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Robot(object):\n",
+        "  def __init__(self, age, gender):\n",
+        "    self.age = age\n",
+        "    self.gender = gender\n",
+        "    self.qa = {\n",
+        "      '保險':'以下是我們推薦的險總類',\n",
+        "      '貸款' :'以下是我們推薦的貸款總類',\n",
+        "      '餘額': '以下是您的銀行存款餘額',   \n",
+        "    }\n",
+        "  def getRobotAge(self):\n",
+        "    return self.age\n",
+        "\n",
+        "  def getRobotGender(self):\n",
+        "    return self.gender\n",
+        "\n",
+        "  def addQA(self, question, answer):\n",
+        "    self.qa[question] = answer\n",
+        "    \n",
+        "  def getMessage(self, question):\n",
+        "    for q in self.qa:\n",
+        "      if q in question:\n",
+        "        return self.qa.get(q)\n",
+        "        #break\n",
+        "    else:\n",
+        "      return '我現在還不聰明，等我變聰明後再告訴你'"
+      ],
+      "execution_count": 248,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lg9CRg15HdX_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3246d3ae-1157-4045-b4a4-b1a86ff5403a"
+      },
+      "source": [
+        "e = Robot(10, 'M')\n",
+        "e.getRobotAge()"
+      ],
+      "execution_count": 249,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 249
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-ViaCBJDHjo1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "aadafc96-e249-4e82-ca39-2d118aefebcb"
+      },
+      "source": [
+        "e.getRobotGender()"
+      ],
+      "execution_count": 250,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'M'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 250
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hSbgh0XYHlhL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5e50696d-ef5d-4791-c79a-f2f14212c574"
+      },
+      "source": [
+        "e.getMessage('我想要貸款')"
+      ],
+      "execution_count": 251,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'以下是我們推薦的貸款總類'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 251
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qn9YLvXlIeld",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8a9b712d-1a8f-4b18-80ac-0c3d63078535"
+      },
+      "source": [
+        "e.getMessage('早安')"
+      ],
+      "execution_count": 252,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'我現在還不聰明，等我變聰明後再告訴你'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 252
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8rjHwt2MIhTw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "e.addQA('早安', '妳也早安')"
+      ],
+      "execution_count": 253,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XJkPOtzrI1wZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "72872615-a34e-4afb-85e4-42de9c0ab128"
+      },
+      "source": [
+        "e.getMessage('早安')"
+      ],
+      "execution_count": 254,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'妳也早安'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 254
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g4vgQtg0I4Bx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 598
+        },
+        "outputId": "8cb35e7d-e582-48a1-fc74-4ea06a5e11f8"
+      },
+      "source": [
+        "dir(e)"
+      ],
+      "execution_count": 255,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__class__',\n",
+              " '__delattr__',\n",
+              " '__dict__',\n",
+              " '__dir__',\n",
+              " '__doc__',\n",
+              " '__eq__',\n",
+              " '__format__',\n",
+              " '__ge__',\n",
+              " '__getattribute__',\n",
+              " '__gt__',\n",
+              " '__hash__',\n",
+              " '__init__',\n",
+              " '__init_subclass__',\n",
+              " '__le__',\n",
+              " '__lt__',\n",
+              " '__module__',\n",
+              " '__ne__',\n",
+              " '__new__',\n",
+              " '__reduce__',\n",
+              " '__reduce_ex__',\n",
+              " '__repr__',\n",
+              " '__setattr__',\n",
+              " '__sizeof__',\n",
+              " '__str__',\n",
+              " '__subclasshook__',\n",
+              " '__weakref__',\n",
+              " 'addQA',\n",
+              " 'age',\n",
+              " 'gender',\n",
+              " 'getMessage',\n",
+              " 'getRobotAge',\n",
+              " 'getRobotGender',\n",
+              " 'qa']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 255
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "39-JK2FiI7aB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "82c03d66-9e04-412a-a3ad-e0e58e36a256"
+      },
+      "source": [
+        "e.qa"
+      ],
+      "execution_count": 256,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'保險': '以下是我們推薦的險總類', '早安': '妳也早安', '貸款': '以下是我們推薦的貸款總類', '餘額': '以下是您的銀行存款餘額'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 256
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S9WHSAtjJAk5",
         "colab_type": "code",
         "colab": {}
       },
