--- a/Demo20200818.ipynb
+++ b/Demo20200818.ipynb
@@ -5961,6 +5961,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "crBhmrl9YkOO",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Practice"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "OMT6Zg7PTFrV",
@@ -5974,6 +5984,165 @@
         "台新從數位銀行出發創建「Richart Life」平台，建構台新Pay、台新Point系統。雙方宛如\n",
         "「招財貓」對決「黑狗」，貓狗大戰激情開打。\n",
         "'''"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_7EMQCpTYlcK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "092c09bf-1d33-4ffa-93d1-ec3ef1c463b3"
+      },
+      "source": [
+        "! pip install jieba"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: jieba in /usr/local/lib/python3.6/dist-packages (0.42.1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BjpFBFroYmb4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        },
+        "outputId": "547db296-177a-4550-9495-46c482b322ea"
+      },
+      "source": [
+        "# encoding=utf-8\n",
+        "import jieba\n",
+        "\n",
+        "jieba.enable_paddle()# 启动paddle模式。 0.40版之后开始支持，早期版本不支持\n",
+        "strs=[\"我来到北京清华大学\",\"乒乓球拍卖完了\",\"中国科学技术大学\"]\n",
+        "for str in strs:\n",
+        "    seg_list = jieba.cut(str,use_paddle=True) # 使用paddle模式\n",
+        "    print(\"Paddle Mode: \" + '/'.join(list(seg_list)))\n",
+        "\n",
+        "seg_list = jieba.cut(\"我来到北京清华大学\", cut_all=True)\n",
+        "print(\"Full Mode: \" + \"/ \".join(seg_list))  # 全模式"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Installing paddle-tiny, please wait a minute......\n",
+            "Paddle enabled successfully......\n",
+            "Building prefix dict from the default dictionary ...\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Paddle Mode: 我/来到/北京清华大学\n",
+            "Paddle Mode: 乒乓球/拍卖/完/了\n",
+            "Paddle Mode: 中国科学技术大学\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Dumping model to file cache /tmp/jieba.cache\n",
+            "Loading model cost 0.853 seconds.\n",
+            "Prefix dict has been built successfully.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Full Mode: 我/ 来到/ 北京/ 清华/ 清华大学/ 华大/ 大学\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7fqQKridYyL_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "afa325e4-bb77-491e-83f6-22173e33f6ca"
+      },
+      "source": [
+        "seg_list = jieba.cut(\"我来到北京清华大学\", cut_all=False)\n",
+        "print(\"Default Mode: \" + \"/ \".join(seg_list))  # 精确模式"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Default Mode: 我/ 来到/ 北京/ 清华大学\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Xfx6mgRY8zS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        },
+        "outputId": "0cdf94f1-79f2-496b-8402-04e50c8d6b1e"
+      },
+      "source": [
+        "import jieba\n",
+        "jieba.add_word('生態圈')\n",
+        "seg_list = jieba.cut(news, cut_all=False)\n",
+        "print(\"Default Mode: \" + \"/ \".join(seg_list)) "
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Default Mode: \n",
+            "/ 迎戰/ 數位/ 金融/ 時代/ ，/ 銀行/ 服務朝/ 「/ 生態圈/ 」/ 發展/ ，/ 其中/ 玉山/ 銀行/ 、/ 台新/ 銀行/ 兩大/ 「/ 死/ 對頭/ 」/ \n",
+            "/ 動作/ 積極/ 。/ 玉山/ 銀行強/ 打/ 「/ 玉山/ Wallet/ 」/ ，/ 開發/ 信用卡/ 支付/ 、/ 理財及/ 消費/ 通路/ 一條/ 龍/ 功能/ ；/ \n",
+            "/ 台新/ 從/ 數位/ 銀行/ 出發/ 創建/ 「/ Richart/  / Life/ 」/ 平台/ ，/ 建構/ 台/ 新/ Pay/ 、/ 台新/ Point/ 系統/ 。/ 雙方/ 宛如/ \n",
+            "/ 「/ 招財貓/ 」/ 對決/ 「/ 黑狗/ 」/ ，/ 貓狗大戰/ 激情/ 開打/ 。/ \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EfJNbS7gZENF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
