--- a/Demo20200819.ipynb
+++ b/Demo20200819.ipynb
@@ -3793,13 +3793,158 @@
       "metadata": {
         "id": "T2nmHeA2ZkXr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "dbd1b1f2-1dbc-4992-ae6f-97d7cfb477b0"
       },
       "source": [
-        ""
+        "(df['Exited'] == 1).sum() / len(df)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.2037"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zJ3Dl3kicD0-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "4ce1c9f5-c29b-4588-fc73-58de5bd45413"
+      },
+      "source": [
+        "df['Exited'].value_counts()"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    7963\n",
+              "1    2037\n",
+              "Name: Exited, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q1qGqFfCcQ4Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "7d387cb9-4f04-45f2-b220-48583f72eef6"
+      },
+      "source": [
+        "df['Exited'].value_counts() / len(df)"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    0.7963\n",
+              "1    0.2037\n",
+              "Name: Exited, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4W0nJuUocYSO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "fb957bf1-88c8-44d1-d8b2-f1db903988ef"
+      },
+      "source": [
+        "df['Exited'].sum()"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2037"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IJvbpXZ0cnRo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "08774abe-8cba-48f0-b787-4b8840810e9b"
+      },
+      "source": [
+        "# select count(exited) from df group by exited\n",
+        "df.groupby('Exited')['Exited'].count()"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Exited\n",
+              "0    7963\n",
+              "1    2037\n",
+              "Name: Exited, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 85
+        }
+      ]
     }
   ]
 }
